// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compile snapshots (3 fixture MIDIs) > fixture A: melody + bass 1`] = `
{
  "barStarts": [
    0,
  ],
  "channels": [
    {
      "checksum": 4110174849,
      "head": [
        213,
        213,
        213,
        213,
        213,
        213,
        213,
        213,
        213,
        213,
        213,
        213,
      ],
      "id": "p1",
      "nonZero": 116,
      "volHead": [
        12,
        12,
        12,
        12,
        12,
        12,
        12,
        12,
        12,
        12,
        12,
        12,
      ],
    },
    {
      "checksum": 768065735,
      "head": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "id": "p2",
      "nonZero": 0,
      "volHead": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "checksum": 3008002951,
      "head": [
        427,
        427,
        427,
        427,
        427,
        427,
        427,
        427,
        427,
        427,
        427,
        427,
      ],
      "id": "tri",
      "nonZero": 120,
      "volHead": [
        15,
        15,
        15,
        15,
        15,
        15,
        15,
        15,
        15,
        15,
        15,
        15,
      ],
    },
    {
      "checksum": 768065735,
      "head": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "id": "noise",
      "nonZero": 0,
      "volHead": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
    },
  ],
  "frameCount": 150,
}
`;

exports[`compile snapshots (3 fixture MIDIs) > fixture B: block chords auto-arranged as split across tri/p1/p2 1`] = `
{
  "barStarts": [
    0,
  ],
  "channels": [
    {
      "checksum": 1474504647,
      "head": [
        427,
        427,
        427,
        427,
        427,
        427,
        427,
        427,
        427,
        427,
        427,
        427,
      ],
      "id": "p1",
      "nonZero": 144,
      "volHead": [
        10,
        10,
        10,
        10,
        10,
        10,
        10,
        10,
        10,
        10,
        10,
        10,
      ],
    },
    {
      "checksum": 3291421811,
      "head": [
        338,
        284,
        338,
        284,
        338,
        284,
        338,
        284,
        338,
        284,
        338,
        284,
      ],
      "id": "p2",
      "nonZero": 144,
      "volHead": [
        10,
        10,
        10,
        10,
        10,
        10,
        10,
        10,
        10,
        10,
        10,
        10,
      ],
    },
    {
      "checksum": 342687687,
      "head": [
        427,
        427,
        427,
        427,
        427,
        427,
        427,
        427,
        427,
        427,
        427,
        427,
      ],
      "id": "tri",
      "nonZero": 144,
      "volHead": [
        15,
        15,
        15,
        15,
        15,
        15,
        15,
        15,
        15,
        15,
        15,
        15,
      ],
    },
    {
      "checksum": 68393927,
      "head": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "id": "noise",
      "nonZero": 0,
      "volHead": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
    },
  ],
  "frameCount": 174,
}
`;

exports[`compile snapshots (3 fixture MIDIs) > fixture C: BPM override at 90 with a pluck 1`] = `
{
  "barStarts": [
    0,
  ],
  "channels": [
    {
      "checksum": 4007764775,
      "head": [
        427,
        427,
        427,
        427,
        427,
        427,
        427,
        427,
        0,
        0,
        0,
        0,
      ],
      "id": "p1",
      "nonZero": 32,
      "volHead": [
        15,
        11,
        8,
        6,
        4,
        3,
        2,
        1,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "checksum": 122591047,
      "head": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "id": "p2",
      "nonZero": 0,
      "volHead": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "checksum": 122591047,
      "head": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "id": "tri",
      "nonZero": 0,
      "volHead": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "checksum": 122591047,
      "head": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "id": "noise",
      "nonZero": 0,
      "volHead": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
    },
  ],
  "frameCount": 170,
}
`;
